--- a/public/stylesheet/user/orderSuccess.css
+++ b/public/stylesheet/user/orderSuccess.css
@@ -1,5 +1,9 @@
 /* order-success.css */
 
+body{
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
+}
+
 /* Container styling */
 .order-success-container {
     max-width: 1000px;
