--- a/views/admin/orders.ejs
+++ b/views/admin/orders.ejs
@@ -51,12 +51,13 @@
                     <thead>
                         <tr>
                             <th>Order Items</th>
+                            <th>Order No</th>
                             <th>Customer</th>
                             <th>Order Date</th>
                             <th>Order Total</th>
                             <th>Payment Method</th>
                             <th>Status</th>
-                            <th>Actions</th>
+                            <!-- <th>Actions</th> -->
                         </tr>
                     </thead>
                     <tbody>
@@ -64,20 +65,24 @@
                             <tr>
                                 <% order.orderedItems.forEach(item => { %>
                                 <td><i class="fas fa-camera"></i> <%= item.product.productName %></td>
-                                
+                                <td><%= order.orderId %></td>
                                 <td><%= order.address.name %></td>
                                 <td><%= order.createdOn.toString().split(' ').splice(1,3).join(' ') %></td>
                                 <td><%= order.totalPrice %></td>
                                 <td><%= order.paymentMethod %></td>
                                 <td>
-                                    <select class="status-dropdown">
-                                        <option value="processing" <%= order.status === 'Processing' ? 'selected' : '' %>>Processing</option>
-                                        <option value="shipped" <%= order.status === 'Shipped' ? 'selected' : '' %>>Shipped</option>
-                                        <option value="delivered" <%= order.status === 'Delivered' ? 'selected' : '' %>>Delivered</option>
-                                        <option value="cancelled" <%= order.status === 'Cancelled' ? 'selected' : '' %>>Cancelled</option>
+                                    <select class="status-dropdown filter" data-id="<%= order._id %>">
+                                        <option value="Pending" <%= order.status === 'Pending' ? 'selected' : '' %>>Pending</option>
+                                        <option value="Processing" <%= order.status === 'Processing' ? 'selected' : '' %>>Processing</option>
+                                        <option value="Shipped" <%= order.status === 'Shipped' ? 'selected' : '' %>>Shipped</option>
+                                        <option value="Delivered" <%= order.status === 'Delivered' ? 'selected' : '' %>>Delivered</option>
+                                        <option value="Out of Delivery" <%= order.status === 'Out of Delivery' ? 'selected' : '' %>>Out of Delivery</option>
+                                        <option value="Cancelled" <%= order.status === 'Cancelled' ? 'selected' : '' %>>Cancelled</option>
+                                        <option value="Return Request" <%= order.status === 'Return Request' ? 'selected' : '' %>>Return Request</option>
+                                        <option value="Returned" <%= order.status === 'Returned' ? 'selected' : '' %>>Returned</option>
                                     </select>
                                 </td>
-                                <td><a href="#" class="action-link">Update Status</a></td>
+                                <!-- <td><a href="#" class="action-link"><button class="filter">Update Status</button></a></td> -->
                             </tr>
                             <% }) %>
                         <% }) %>
@@ -88,6 +93,59 @@
             <!-- Pagination -->
         </div>
     </div>
+
+    <script>
+        
+        document.addEventListener('DOMContentLoaded', () => {
+
+            document.querySelectorAll('.status-dropdown').forEach(element => {
+                element.addEventListener('change', async(e) => {
+                    const newStatus = e.target.value
+                    const orderId = e.target.dataset.id
+
+                    console.log(`Order Id : ${orderId}, New Status : ${newStatus}`)
+
+                    try {
+                        const response = await fetch('/admin/updateStatus',{
+                            method : 'POST',
+                            body : JSON.stringify({status : newStatus, orderId}),
+                            headers : {
+                                'Content-Type' : 'application/json'
+                            }
+                        })
+
+                        if (!response.ok) {
+                            throw new Error('Network response was not ok');
+                        }
+
+
+                        const data = await response.json();
+                        if (data.success) {
+                            // closeAddModal();
+                            window.location.reload();
+                        } else {
+                            Swal.fire({
+                                icon: 'error',
+                                title: 'Failed',
+                                text: data.message || `Failed to update status!`
+                            });
+                        }
+                    } catch (error) {
+                        Swal.fire({
+                            icon: 'error',
+                            title: 'Error',
+                            text: navigator.onLine
+                                ? `Error update status: ${error.message}`
+                                : 'No internet connection. Please check your network and try again.'
+                        });
+                    }
+                })
+            });
+
+
+        })
+
+    </script>
            
 </body>
 </html>
